fix vertical align top, add variables for menu components

--- a/src/SambalOelek/SambalOelek.less
+++ b/src/SambalOelek/SambalOelek.less
@@ -3,8 +3,13 @@
 .include (@value) when (@useNormalize = true) and (@value = normalize) {
 	@import "includes/normalize.less";
 }
+// include functions
+.include (@value) when (@useReset = true) and (@value = reset) {
+	@import "includes/reset.less";
+}
 // init the include
 .include(normalize);
+.include(reset);
 /* Mixin function -------------------------------------- */
 @import "fix/fix.ie7.less";
 @import "includes/up.less";
